# cache-nix-action

./: .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc.json  CONTRIBUTING.md  README.md  RELEASES.md  action.nix  action.yml  caching-strategies.md  debug-notes.md  examples.md  flake.nix  mkFlakeClosure.nix  package-lock.json  package.json  pyproject.toml  saveFromGC.nix  table.py  tips-and-workarounds.md  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: buildjet-ci.yaml  check-dist.yml  ci.yaml  test-determinate-systems-installer.yml  test-hash-collision.yml  workflow.yml
.github/workflows-legacy/: check-dist.yml  codeql.yml  licensed.yml  publish-immutable-actions.yml  workflow.yml
__tests__/: actionUtils.test.ts  cacheBackend.test.ts  restore.test.ts  restoreImpl.test.ts  restoreOnly.test.ts
__tests__/utils/: actionUtils.ts  testUtils.ts
cache_nix_action/: translate_table.py
examples/saveFromGC/: flake.nix
nix/: ci.nix
restore/: README.md  action.yml
save/: README.md  action.yml
scripts/: translate_table.py
src/: constants.ts  gc.ts  inputs.ts  purge.ts  restore.ts  restoreExtraCaches.ts  restoreImpl.ts  save.ts  saveImpl.ts  stateProvider.ts
src/templates/: merge.sql
src/utils/: action.ts  actionUtils.ts  cacheBackend.ts  collectGarbage.ts  database.ts  inputs.ts  install.ts  log.ts  mergeStoreDatabases.ts  overrideUrl.ts  purge.ts  restore.ts  testUtils.ts
